--- a/careerlyclonefrontend/src/App.scss
+++ b/careerlyclonefrontend/src/App.scss
@@ -1,4 +1,15 @@
+.root {
+  height: 100vh;
+}
+
 .root-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.root-content {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
