--- a/careerlyclonefrontend/src/css/pages/MainPage.scss
+++ b/careerlyclonefrontend/src/css/pages/MainPage.scss
@@ -65,6 +65,17 @@
   -webkit-line-clamp: 3;
 }
 
+.feed-content--btn {
+  max-height: 1.5rem;
+  line-height: 1.5rem;
+  border: 0;
+  background-color: transparent;
+  pointer-events: auto;
+  cursor: pointer;
+  color: #808080;
+  font-weight: bold;
+}
+
 .subfeed-profile--img {
   width: 18px;
   height: 18px;
