[bugfix] 메인 페이지 및 상세 페이지 css 수정 및 추가
상세 페이지 관련 css 추가

--- a/careerlyclonefrontend/src/css/pages/MainPage.scss
+++ b/careerlyclonefrontend/src/css/pages/MainPage.scss
@@ -38,6 +38,10 @@
   border-left: 1px solid lightgrey;
 }
 
+.feed-frame {
+  width: 100%;
+}
+
 .feed-frame--element {
   border-bottom: 1px solid #ccc;
   padding: 10px 0;
