[refactor] 게시글 생성 리팩토링
게시글 작성 시

BlockStyle(ordered/unordered list item)

InlineStyle(bold, underline, strikethrough)

적용을 위해 Draft.js 라이브러리 사용

또한 게시글 content를 서버로 보낼 때 JSON을 stringify하여 직렬화한
데이터로 보내고
서버로부터 데이터를 받을 땐 parse로 역직렬화하여 사용

content 내용과 style 적용 데이터는 contentState안에 들어있음
contentState는 라인별로 plainText와 blockStyle, inlineStyle이 해당
라인에 어떤 것이 적용되었는지 정보를 담고 있음

inlineStyle의 경우 offset과 length를 통해 적용 범위를 표시해줌

--- a/careerlyclonefrontend/src/css/pages/CreateForm.scss
+++ b/careerlyclonefrontend/src/css/pages/CreateForm.scss
@@ -4,13 +4,16 @@
 
 .create-form-edit-tools{
   border-bottom: 1px solid lightgray;
+  display: flex;
+  justify-content: center;
 }
 
-.create-from-edit-tools--list{
+.create-form-edit-tools--list{
   width: 50%;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
 }
 
 .create-form-edit--contents {
@@ -66,4 +69,27 @@
 .create-form-button {
   margin: 0 5px;
   width: 2rem;
+}
+
+.create-form-edit-tools--tool {
+  width: 2.5rem;
+  height: 2.5rem;
+  border: none;
+}
+
+.create-form-insert-image--frame {
+  border: 1px dotted gray;
+  border-radius: 5px;
+  height: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.create-form-insert-image--placeholder {
+  color: lightgray;
+}
+
+.create-form-insert-image--content {
 }
