[bugfix] 상세 페이지 grid 적용 및 navBar 겹치는 문제 해결
상세 페이지 grid 적용 => 8 / 12 (start: 3, end: 11)
scss는 전역에 적용되기 때문에

PostingDetailComponent의 feed-frame과
feed-frame--element className을 각각 feed-frame--detail,
feed-frame-detail--element로 변경

navBar와 겹치지 않도록 margin-top 추가

--- a/careerlyclonefrontend/src/css/pages/PostingDetail.scss
+++ b/careerlyclonefrontend/src/css/pages/PostingDetail.scss
@@ -1,9 +1,11 @@
-.feed-frame {
+.feed-frame--detail {
   margin-top: 1.5rem;
-  width: 60%;
+  display: grid;
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
-.feed-frame--element {
+.feed-frame-detail--element {
+  grid-column: 3 / span 8;
   border-bottom: 1px solid #ccc;
   padding: 10px 0;
 }
